--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "translate_extension",
+  "name": "once_click_extension",
   "version": "1.0.0",
   "description": "",
   "type": "module",
