--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "OneClick Assistant",
     "version": "1.0",
-    "description": "Con sólo 1 click podrás obtener información sobre lo que quieras, sólo debes posicionar el mouse sobre el bloque de texto que quieras analizar, o simplemente selecciona una palabra o frase y suelta. En segundos tendrás la información que necesitas.",
+    "description": "Con sólo 1 click podrás obtener información sobre lo que quieras, sólo debes posicionar el mouse sobre el bloque de texto que quieras analizar, o simplemente selecciona una palabra o frase y suelta. En segundos tendrás la información que necesitas y en español.",
     "permissions": [
         "contextMenus",
         "activeTab",
